--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,9 +20,9 @@
 <section id="one">
 	<div class="inner">
 		<header class="major">
-			<h1>{{ page.title }}</h1>
+			<h1><a href="{{ page.link }}">{{ page.title }}</a></h1>
 		</header>
-		{% if page.image %}<span class="image main"><img src="{{ site.baseurl }}/{{ page.image }}" alt="" /></span>{% endif %}
+		{% if page.image %}<span class="image main"><a href="{{ page.link }}"><img src="{{ site.baseurl }}/{{ page.image }}" alt="" /></a></span>{% endif %}
 		<p>{{ content }}</p>
 	</div>
 </section>
