--- a/_sass/components/_section.scss
+++ b/_sass/components/_section.scss
@@ -36,9 +36,9 @@
 			}
 
 			> p {
-				font-size: 0.9em;
+				font-size: 0.8em;
 				font-weight: _font(weight-bold);
-				letter-spacing: _font(letter-spacing-alt);
+//				letter-spacing: _font(letter-spacing-alt);
 				margin-bottom: 0;
 //				text-transform: uppercase;
 			}
