--- a/_sass/components/_tiles.scss
+++ b/_sass/components/_tiles.scss
@@ -24,17 +24,20 @@
 				'filter 1s ease',
 				'-webkit-filter 1s ease'
 			));
-			@include padding(4em, 4em);
+			@include padding(3em, 3em);
 			background-position: center;
 			background-repeat: no-repeat;
-			background-size: cover;
+			background-size: contain;
 			cursor: default;
-			height: 40vh;
+			height: 26vh;
 			max-height: 40em;
-			min-height: 23em;
+			min-height: 16em;
 			overflow: hidden;
 			position: relative;
-			width: 25%;
+
+			&:nth-child(n) {
+				width: 20%;
+			}
 
 			.image {
 				display: none;
@@ -46,7 +49,7 @@
 			}
 
 			h3 {
-				font-size: 1.75em;
+				font-size: 1.3em;
 
 				a {
 					&:hover {
@@ -95,7 +98,7 @@
 					opacity: 0;
 				}
 			}
-
+			
 			&.is-transitioning {
 				@include vendor('transform', 'scale(0.95)');
 				@include vendor('filter', 'blur(0.5em)');
@@ -145,12 +148,23 @@
 				height: 30vh;
 				max-height: 30em;
 				min-height: 20em;
+
+				&:nth-child(n) {
+					width: 25% !important;
+				}
 			}
 		}
 
 		@include breakpoint(medium) {
 			article {
-				width: 50% !important;
+				&:nth-child(3n - 1),
+				&:nth-child(3n) {
+					width: 33% !important;
+				}
+
+				&:nth-child(3n - 2) {
+					width: 34% !important;
+				}
 			}
 		}
 
@@ -160,7 +174,11 @@
 				height: 16em;
 				max-height: none;
 				min-height: 0;
-
+				
+				&:nth-child(n) {
+					width: 50% !important;
+				}
+				
 				h3 {
 					font-size: 1.5em;
 				}
@@ -172,7 +190,10 @@
 
 			article {
 				height: 20em;
-				width: 100% !important;
+
+				&:nth-child(n) {
+					width: 100% !important;
+				}
 			}
 		}
 	}
