add description links

--- a/_includes/tiles.html
+++ b/_includes/tiles.html
@@ -9,6 +9,9 @@
                         <h3><a href="{{ post.link }}" class="link">{{ post.title }}</a></h3>
                         <p>{{ post.description }}</p>
                 </header>
+                <footer>
+                        <a href="{{ post.url }}">詳細</a>
+                </footer>
         </article>
 	{% endif %}
 	{% endfor %}
