--- a/_sass/components/_tiles.scss
+++ b/_sass/components/_tiles.scss
@@ -24,7 +24,7 @@
 				'filter 1s ease',
 				'-webkit-filter 1s ease'
 			));
-			@include padding(3em, 3em);
+			flex-direction: column;
 			background-position: center;
 			background-repeat: no-repeat;
 			background-size: contain;
@@ -34,22 +34,33 @@
 			min-height: 16em;
 			overflow: hidden;
 			position: relative;
-
+			
 			&:nth-child(n) {
 				width: 20%;
 			}
-
+			
 			.image {
 				display: none;
 			}
-
+			
 			header {
+				width: 75%;
+				height: 75%;
+				margin-top: 3em;
 				position: relative;
 				z-index: 3;
 			}
 
+			footer{
+				width: 100%;
+				margin-right: 1.2em;
+				margin-bottom: 0.4em;
+				text-align: right;
+				z-index: 5;
+			}
+
 			h3 {
-				font-size: 1.3em;
+				font-size: 1.35em;
 
 				a {
 					&:hover {
@@ -144,13 +155,16 @@
 
 		@include breakpoint(large) {
 			article {
-				@include padding(4em, 3em);
 				height: 30vh;
 				max-height: 30em;
 				min-height: 20em;
 
 				&:nth-child(n) {
 					width: 25% !important;
+				}
+
+				h3 {
+					font-size: 1.65em;
 				}
 			}
 		}
@@ -170,17 +184,12 @@
 
 		@include breakpoint(small) {
 			article {
-				@include padding(3em, 1.5em);
 				height: 16em;
 				max-height: none;
 				min-height: 0;
 				
 				&:nth-child(n) {
 					width: 50% !important;
-				}
-				
-				h3 {
-					font-size: 1.5em;
 				}
 			}
 		}
@@ -193,6 +202,10 @@
 
 				&:nth-child(n) {
 					width: 100% !important;
+				}
+
+				h3 {
+					font-size: 1.85em;
 				}
 			}
 		}
