--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,6 +21,7 @@
 	<div class="inner">
 		<header class="major">
 			<h1><a href="{{ page.link }}">{{ page.title }}</a></h1>
+			<h4>{{ page.description }}</h5>
 		</header>
 		{% if page.image %}<span class="image main"><a href="{{ page.link }}"><img src="{{ site.baseurl }}/{{ page.image }}" alt="" /></a></span>{% endif %}
 		<p>{{ content }}</p>
