--- a/_includes/tiles.html
+++ b/_includes/tiles.html
@@ -1,7 +1,7 @@
 <section id="one" class="tiles">
 	{% for post in site.posts limit:site.tiles-count %}
 	{% if site.tiles-source == 'posts' %}
-        <article>
+        <article ontouchstart="">
                 <span class="image">
                         <img src="{{ post.image }}" alt="" />
                 </span>
